--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.bnk filter=lfs diff=lfs merge=lfs -text
 *.wav filter=lfs diff=lfs merge=lfs -text
 *.apk filter=lfs diff=lfs merge=lfs -text
+*.abc filter=lfs diff=lfs merge=lfs -text
